SHOR-50: Fix left alignment for Payment/Contribution toggle box on New Membership page

--- a/scss/civicrm/contact/pages/_memberships.scss
+++ b/scss/civicrm/contact/pages/_memberships.scss
@@ -256,6 +256,12 @@
       margin-left: 40px;
     }
   }
+  
+  #contributionTypeToggle {
+    > td {
+      padding-left: 20px;
+    }
+  }
 
   .crm-membership-form-block {
     .auto-renew-text {
